--- a/assets/stylesheets/components/_global-header.scss
+++ b/assets/stylesheets/components/_global-header.scss
@@ -30,11 +30,11 @@ $global-header-height-mobile: 116px;
 }
 .global-header__branding {
     @include clearfix();
-    padding: ($gs-gutter / 2);
+    padding: $mobile-gutter;
     padding-bottom: $gs-gutter;
 
     @include mq(tablet) {
-        padding: ($gs-gutter / 2) $gs-gutter;
+        padding: $gs-baseline $tablet-gutter;
     }
 }
 .global-header__primary {
